Changelog
=========

1.4.1 (unreleased)
------------------

- Nothing changed yet.


1.4.0 (2015-02-26)
------------------

- Add support for search results from external sites. Solr flares having a 
  getRemoteUrl attribute that starts with 'http' are handled as external
  results. External sites can be indexed with ftw.crawler.
  [buchi]

- BugFix in "recursive_index_security" method. Do not try to reindex the
  security on not catalog aware objects.
  [mathias.leimgruber]

- Some work on docs (fix Pythonism, add some info, improve markup). [jean]


1.3.1 (2014-06-12)
------------------

- Fix error in suggestions when there is no solr response.
  [buchi]

- Make sure that string attributes of a PloneFlare are always utf-8 encoded
  byte strings to be consistent with catalog brains.
  [buchi]


1.3 (2013-12-19)
----------------

- Updated jquery.history.js to latest version (1.8.0b2) which fixes issues
  with URI encoding in IE9.
  [buchi]

- Removed link to advanced search in livesearch when no results are found.
  [buchi]

- "show all"-link includes the path attribute.
  [elioschmutz]

- Added support for forward as well as reverse wildcard search.
  This is done by providing two additional dynamic variables in the search pattern,
  value_lwc and value_twc that have leading respectively trailing wildcards appended
  to each of the search terms.
  [lgraf]

- Fix querystring of suggestions with list parameters.
  [buchi]


1.2.2 (2013-09-24)
------------------

- Added class around link to advanced search.
  [Julian Infanger]


1.2.1 (2013-09-10)
------------------

- Fixed monkey patch of mangleQuery.
  [buchi]


1.2 (2013-09-10)
----------------

- Improve reindexing object security performance.
  We now walk down the children and stop walking down if the security indexes
  of an object have not changed.
  [jone]

- Added support for atomic updates.
  This means whenever possible, only the necessary / specified attributes get updated