@@ -1,10 +1,10 @@
 # Modified implementation from c.solr.utils:
-# Treat search terms ending with a digit as simple
+# - simple terms may contain digits
+# - simple terms may contain dots
 
 from re import compile, UNICODE
 
-
-simpleTerm = compile(r'^[\w\d]+$', UNICODE)
+simpleTerm = compile(r'^[\w\d\.]+$', UNICODE)
 def isSimpleTerm(term):
     if isinstance(term, str):
         term = unicode(term, 'utf-8', 'ignore')
@@ -12,7 +12,7 @@ def isSimpleTerm(term):
 
 
 operators = compile(r'(.*)\s+(AND|OR|NOT)\s+', UNICODE)
-simpleCharacters = compile(r'^[\w\d\?\*\s]+$', UNICODE)
+simpleCharacters = compile(r'^[\w\d\?\*\s\.]+$', UNICODE)
 def isSimpleSearch(term):
     term = term.strip()
     if isinstance(term, str):
