@@ -1,4 +1,5 @@
 from ftw.solr.patches.utils import isSimpleSearch
+from ftw.solr.patches.utils import isSimpleTerm
 from unittest import TestCase
 
 
@@ -10,3 +11,17 @@ class TestIsSimpleSearch(TestCase):
         self.assertFalse(isSimpleSearch('"bar"'))
         self.assertFalse(isSimpleSearch('foo "bar"'))
         self.assertFalse(isSimpleSearch('foo"bar'))
+
+    def test_simple_searches_may_contain_dots(self):
+        self.assertTrue(isSimpleSearch('foo.bar'))
+        self.assertTrue(isSimpleSearch('foo.bar baz'))
+
+
+class TestIsSimpleTerm(TestCase):
+
+    def test_simple_terms_may_contain_dots(self):
+        self.assertTrue(isSimpleTerm('foo.bar'))
+
+    def test_simple_terms_may_contain_digits(self):
+        self.assertTrue(isSimpleTerm('foo7bar'))
+        self.assertTrue(isSimpleTerm('foo7'))
